fix jumpy header

--- a/app/styles/_app-controls.scss
+++ b/app/styles/_app-controls.scss
@@ -1,3 +1,18 @@
+#app-controls-wrapper {
+  height: 50px;
+  margin-bottom: 30px;
+}
+
+#app-controls {
+  z-index: 100;
+  height: 50px;
+  &.fixed {
+    top: 50px;
+    position: fixed;
+    width: 100%;
+  }
+}
+
 .isotope-list-wrapper {
   width: 100%;
   .nav {
