--- a/app/styles/_app.scss
+++ b/app/styles/_app.scss
@@ -55,6 +55,7 @@ body {
 
 #app-controls {
   z-index: 100;
+  height: 50px;
   &.fixed {
     top: 50px;
     position: fixed;
